Rajout package Geocoder Réorganisation des blocks Mise sous forme de template du bloc d'infos, sous la présentation : blocks/infoBlock

--- a/client/main.css
+++ b/client/main.css
@@ -20,3 +20,11 @@
 .parallax-container {
 	height: 400px;
 }
+
+.row .col.s12 .card-image {
+	max-height: 120px;
+}
+
+.info-block {
+	margin-bottom: 0;
+}
