--- a/imports/ui/components/clothes-item.html
+++ b/imports/ui/components/clothes-item.html
@@ -4,36 +4,36 @@
 
       <div class="card-image center-align">
         <div class="img-wrapper">
-          <img class="activator" src="{{getIllustration(cloth.clothImage)}}">
+          <img class="activator" src="{{getIllustration(cloth.image)}}">
           <!-- TODO : is active helper -->
         </div>
       </div>
 
       <div class="card-content center-align">        
         <div class="price green btn-large">
-          <span class="white-text thin">{{cloth.clothPrice}}€/j</span>
+          <span class="white-text thin">{{cloth.price}}€/j</span>
         </div>
-        <span class="card-title white-text truncate">{{cloth.clothName}}</span>
-        <p class="white-text thin">{{cloth.clothDescr}}</p>
+        <span class="card-title white-text truncate">{{cloth.name}}</span>
+        <p class="white-text thin">{{cloth.description}}</p>
       </div>
 
       <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">{{cloth.clothName}}<i class="material-icons right">close</i></span>
+        <span class="card-title grey-text text-darken-4">{{cloth.name}}<i class="material-icons right">close</i></span>
         <p>
-          {{cloth.clothDescr}}
+          {{cloth.description}}
           <br><br>
           Disponibilité : demain
           <!-- {{cloth.date}} -->
           <br>
-          Prix : {{cloth.clothPrice}}€ / jour de location
+          Prix : {{cloth.price}}€ / jour de location
           <br>
-          Propriétaire : {{getOwnerUserName(cloth.userId)}} (voir son dressing)
-          Emplacement : {{getCity(cloth.userId)}}
+          Propriétaire : {{getOwnerUserName(cloth.owner)}} (voir son dressing)
+          Emplacement : {{getCity(cloth.owner)}}
         </p>
       </div>
 
       <div class="card-action center-align">
-        <a class="white-text center-align" href="{{ accessRoute(cloth) }}">{{ accessMessage(cloth.userId) }}</a>
+        <a class="white-text center-align" href="{{ accessRoute(cloth) }}">{{ accessMessage(cloth.owner) }}</a>
       </div>
     </div>
   </div>
