--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,4 @@
-/* CSS declarations go here */
+ CSS declarations go here */
 
 @font-face {
     font-family: Banana Yeti; 
@@ -11,7 +11,6 @@ body {
 	min-height: 100vh;
 	flex-direction: column;
 }
-
 main {
 	flex: 1 0 auto;
 }
@@ -52,6 +51,9 @@ main {
 footer.page-footer {
 }
 
+/*------------------*/
+/* cloth item style */
+/*------------------*/
 .cloth-item .card-image {
 	height: 50%;
 }
@@ -86,15 +88,27 @@ footer.page-footer {
 .cloth-item .card-action a {
 	margin-right: 0 !important;
 }
+/*----------------------*/
+/* end cloth item style */
+/*----------------------*/
 
-/* Forms label color */
+#insertClothForm 
+.form-group input[type=text],
+#insertClothForm textarea,
+/* Forms select label color */
+#insertClothForm
+.select-wrapper input.select-dropdown,
+/* Forms select color */
+#insertClothForm
 .form-group .dropdown-content li > span {
-	color: #000;
+	color: rgb(58,92,164);
 }
+
 /* Label underline focus color */
+#insertClothForm 
 .form-group input[type=text]:focus {
-	border-bottom: 1px solid #000;
-	box-shadow: 0 1px 0 0 #000;
+	border-bottom: 1px solid rgb(58,92,164);
+	box-shadow: 0 1px 0 0 rgb(58,92,164);
 }
 
 #insertClothForm fieldset {
