--- a/client/main.css
+++ b/client/main.css
@@ -56,8 +56,6 @@ main {
 }
 #at-nav-button:hover { background-color: rgb(100,152,254); }
 
-
-
 #search-button { background-color: rgb(57,92,164); }
 #search-button:hover { background-color: rgb(100,152,254); }
 
@@ -83,7 +81,7 @@ main {
 }
 
 .theme-block img {
-	height: 150px;
+  max-height: 400px;
 }
 
 footer.page-footer {
