--- a/client/main.css
+++ b/client/main.css
@@ -224,44 +224,44 @@ footer.page-footer {
   text-align: left;
 }
 
-.add-cloth-form 
+form 
 .form-group input[type=text],
-.add-cloth-form textarea,
+form textarea,
 /* Forms select label color */
-.add-cloth-form
+form
 .select-wrapper input.select-dropdown,
 /* Forms select color */
-.add-cloth-form
+form
 .form-group .dropdown-content li > span {
   color: rgb(58,92,164);
 }
 
 /* Label underline focus color */
-.add-cloth-form 
+form 
 .form-group input[type=text]:focus {
   border-bottom: 1px solid rgb(58,92,164);
   box-shadow: 0 1px 0 0 rgb(58,92,164);
 }
 
-.add-cloth-form fieldset {
+form fieldset {
   padding: 1.6rem;
   padding-top: 1.3rem;
 }
 
-.add-cloth-form label {
+form label {
   font-size: 1rem;
 }
 
-.add-cloth-form .control-label {
+form .control-label {
   font-size: 1.2rem;
   color: black;
 }
 
-.add-cloth-form .switch-size {
+form .switch-size {
   display: inline-block;
 }
 
-.add-cloth-form .size-value {
+form .size-value {
   border: 1px solid black;
   border-radius: 80px;
   display: inline-block;
@@ -276,59 +276,65 @@ footer.page-footer {
   width: 48px;
 }
 
-.add-cloth-form .size-slider {
+form .size-slider {
   margin-bottom: 60px;
 }
 
-.add-cloth-form
+form
 .switch label 
 input[type=checkbox]:checked + .lever:after {
   background-color: #4CAF50;
 }
 
-.add-cloth-form
+form
 .switch label 
 input[type=checkbox]:checked + .lever {
   background-color: rgb(126, 225, 130);
 }
 
-.add-cloth-form .price-wrapper {
+form .price-wrapper {
   margin-bottom: 15px;
   margin-top: 20px;
   text-align: center;
 }
 
-.add-cloth-form .price {
+form .price {
   font-size: 34px;
   min-width: 150px;
   padding: 0 1rem;
   text-transform: none;
 }
 
-.add-cloth-form .price-slider {
+form .price-slider {
   margin-top: 10px;
 }
 
-.add-cloth-form .noUi-connect {
+form .noUi-connect {
   background-color: #4CAF50;
 }
 
-.add-cloth-form .size-control,
-.add-cloth-form .price-control {
+form .size-control,
+form .price-control {
   margin-top: 15px;
 }
 
-.add-cloth-form .form-buttons {
+form .form-buttons {
   margin-top: 15px;
   text-align: right;
 }
 
-.add-cloth-form .form-buttons .btn {
+form .form-buttons button {
   margin-top: 5px;
 }
-/*TODO better media queries*/
-/*@media only screen and (min-width: 993px){
-  .dressing .cloth-item {
-    width: 50%;
-  }
-}*/
+
+.logout-button {
+  text-align: center;
+}
+
+.logout-button button {
+  height: 32px;
+  width: 100px;
+  padding: 0;
+  font-size: 12px;
+  line-height: 12px;
+}
