Correction des images dans le formulaire d'ajout de vêtement Correction des sliders Ajout d'une barre de recherche dans la vue /search Style général

--- a/imports/ui/components/clothes-item.html
+++ b/imports/ui/components/clothes-item.html
@@ -4,7 +4,7 @@
 
       <div class="card-image center-align">
         <div class="img-wrapper">
-          <img class="activator" src="{{getIllustration(cloth.imageId)}}">
+          <img class="activator" src="{{getIllustration(cloth.image)}}">
         </div>
         <div class="price green btn-large">
           <span class="white-text thin">{{cloth.price}}€/j</span>
