--- a/client/main.css
+++ b/client/main.css
@@ -124,6 +124,17 @@ footer.page-footer {
 /* end dressing style */
 /*--------------------*/
 
+.search-results input[type=text]{
+  border-bottom: 1px solid rgb(58,92,164);
+  box-shadow: 0 1px 0 0 rgb(58,92,164);
+  color: rgb(58,92,164);
+}
+
+.search-results input[type=text]:focus {
+  border-bottom: 1px solid rgb(100,152,254) !important;
+  box-shadow: 0 1px 0 0 rgb(100,152,254) !important;
+}
+
 /*------------------*/
 /* cloth item style */
 /*------------------*/
