Profil + vue de l'offre location

--- a/imports/ui/components/clothes-item.html
+++ b/imports/ui/components/clothes-item.html
@@ -7,7 +7,7 @@
           <img class="activator" src="{{getIllustration(cloth.image)}}">
         </div>
         <div class="price green btn-large">
-          <span class="white-text thin">{{cloth.price}}€/j</span>
+          <span class="white-text">{{cloth.price}}€/j</span>
         </div>
       </div>
 
