--- a/client/main.css
+++ b/client/main.css
@@ -224,11 +224,19 @@ footer.page-footer {
   margin-bottom: 0;
 }
 
+.view-cloth-content .form-buttons {
+  font-size: 1.4rem;
+  text-align: right;
+}
+
 .view-cloth-form .card-image {
   align-items: center;
+  border: 1px solid;
+  border-radius: 5px;
   display: flex;
   height: 300px;
   justify-content: center;
+  padding: 0;
 }
 
 .view-cloth-attributes {
