--- a/imports/ui/components/clothes-item.html
+++ b/imports/ui/components/clothes-item.html
@@ -4,7 +4,7 @@
 
       <div class="card-image center-align">
         <div class="img-wrapper">
-          <img class="activator" src="{{getIllustration(cloth.image)}}">
+          <img class="activator" src="{{getIllustration(cloth.imageId)}}">
         </div>
         <div class="price green btn-large">
           <span class="white-text">{{cloth.price}}€/j</span>
