--- a/client/main.css
+++ b/client/main.css
@@ -15,6 +15,12 @@ main {
   flex: 1 0 auto;
 }
 
+footer {
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .container h3 {
   font-size: 2rem;
   font-weight: 500;
@@ -178,6 +184,7 @@ footer.page-footer {
 .cloth-item .price {
   bottom: -25px;
   font-size: 34px;
+  font-weight: 300;
   padding: 0;
   position: absolute;
   text-transform: none;
@@ -356,4 +363,51 @@ form .form-buttons button {
   padding: 0;
   font-size: 12px;
   line-height: 12px;
+}
+
+.dispo-datepicker {
+  margin-bottom: 15px;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.dispo-datepicker .control-label {
+  color: black;
+  display: block;
+  font-size: 1.2rem;
+}
+
+#multidatespicker {
+  display: inline-block;
+}
+
+.ui-datepicker {
+  border: none;
+}
+
+.ui-datepicker .ui-datepicker-header {
+  background: rgb(100,152,254);
+  border: none;
+  color: white;
+}
+
+.ui-datepicker .ui-datepicker-calendar .ui-state-highlight {
+  border: 1px solid white;
+}
+
+.ui-datepicker .ui-datepicker-calendar .ui-state-highlight a {
+  background-color: black;
+  border: 1px solid rgb(100,152,254);
+}
+
+.book-cloth-form .ui-datepicker .ui-datepicker-calendar .ui-state-highlight a {
+  background-color: rgb(76, 175, 80);
+  border: 1px solid rgb(56, 155, 60);
+}
+
+.ui-datepicker .ui-datepicker-prev-hover,
+.ui-datepicker .ui-datepicker-next-hover {
+  background: none;
+  border: none;
+  color: white;
 }
