--- a/client/main.css
+++ b/client/main.css
@@ -419,7 +419,7 @@ form .form-buttons button {
 }
 
 .ui-datepicker .ui-datepicker-calendar .ui-state-highlight a {
-  background-color: black;
+  background-color: #424242;
   border: 1px solid rgb(100,152,254);
 }
 
@@ -433,4 +433,9 @@ form .form-buttons button {
   background: none;
   border: none;
   color: white;
+}
+
+.search-results
+input[type=text]:focus:not([readonly]) + label {
+  color: rgb(100,152,254);
 }
