--- a/client/main.css
+++ b/client/main.css
@@ -15,6 +15,10 @@ main {
   flex: 1 0 auto;
 }
 
+#main {
+  min-height: 600px;
+}
+
 footer {
   bottom: 0;
   left: 0;
@@ -164,6 +168,16 @@ footer.page-footer {
   box-shadow: 0 1px 0 0 rgb(100,152,254) !important;
 }
 
+.search-loading,
+.search-no-results {
+  font-size: 32px;
+  text-align: center;
+}
+
+.white-space {
+  height: 100px;
+}
+
 /*------------------*/
 /* cloth item style */
 /*------------------*/
@@ -177,6 +191,7 @@ footer.page-footer {
   font-size: 1.4rem;
   height: 48px;
   line-height: 24px;
+  margin-top: 10px;
   overflow: hidden;
 }
 
