--- a/imports/ui/components/notification-item.html
+++ b/imports/ui/components/notification-item.html
@@ -1,8 +1,18 @@
 <template name="Notification_item">
   <div class="col s12 m6 l4 notification-item">
-    <div class="card grey darken-3">
-      Expéditeur : {{getSenderUserName(notification.sender)}}
-      Message : {{getMessageText(notification)}}
+    <div class="card">
+      Expéditeur : <a href="/{{notification.sender}}/dressingview">{{getSenderUserName(notification.sender)}}</a><br/>
+      Objet demandé : <a href="/{{notification.targetedItemId}}/view">{{getClothName(notification.targetedItemId)}}</a><br/>
+      Période demandée : {{getDates(notification.requestedDates)}}<br/>
+      Prix total : {{getPrice(notification)}} €<br/>
+      <div class="form-group form-buttons">
+        <div id="accept" class="green btn-large">
+          <span class="white-text">Accepter</span>
+        </div>
+        <div id="deny" class="red btn-large">
+          <span class="white-text medium">Refuser</span>
+        </div>
+      </div>
     </div>
   </div>
 </template>
