--- a/client/main.css
+++ b/client/main.css
@@ -454,3 +454,19 @@ form .form-buttons button {
 input[type=text]:focus:not([readonly]) + label {
   color: rgb(100,152,254);
 }
+
+.notification-item .notification-title {
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.notification-item .card {
+  background: rgba(100,152,254,0);
+  padding: 10px;
+}
+
+.notification-item .form-buttons {
+  text-align: center;
+}
