--- a/client/main.css
+++ b/client/main.css
@@ -260,6 +260,7 @@ footer.page-footer {
 /*----------------------*/
 
 .view-cloth-form .card {
+  border: 1px solid #c0c0c0;
   padding: 1.6rem;
   padding-top: 1.6rem;
   width: 100%;
@@ -269,19 +270,30 @@ footer.page-footer {
   margin-bottom: 0;
 }
 
+.view-cloth-content .col {
+  text-align: center;
+}
+
+.view-cloth-content .price span {
+  font-size: 3rem;
+  font-weight: 300;
+}
+
 .view-cloth-content .form-buttons {
   font-size: 1.4rem;
-  text-align: right;
+  text-align: center;
 }
 
 .view-cloth-form .card-image {
   align-items: center;
-  border: 1px solid;
-  border-radius: 5px;
-  display: flex;
-  height: 300px;
+  border: 1px solid beige;
+  border-radius: 250px;
+  display: inline-block;
+  height: 70%;
   justify-content: center;
+  margin: 0;
   padding: 0;
+  width: 70%;
 }
 
 .view-cloth-attributes {
@@ -456,7 +468,7 @@ input[type=text]:focus:not([readonly]) + label {
 }
 
 .notification-item .notification-title {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   font-weight: 500;
   text-align: center;
   margin-bottom: 10px;
@@ -464,9 +476,12 @@ input[type=text]:focus:not([readonly]) + label {
 
 .notification-item .card {
   background: rgba(100,152,254,0);
-  padding: 10px;
+  border: 1px solid #c0c0c0;
+  padding: 15px;
+  text-align: center;
 }
 
 .notification-item .form-buttons {
+  margin-top: 10px;
   text-align: center;
 }
